--- a/main.html
+++ b/main.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Voting Eligibility Form</title>
+</head>
+<body style="font-family: sans-serif; padding: 40px; background-color: #f5f5f5;">
+  <h2>Check Voting Eligibility</h2>
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+  <form id="voteForm">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" /><br><br>
 
-  <body>
-    <!-- write the body here -->
+    <label for="age">Age:</label><br>
+    <input type="number" id="age" /><br><br>
 
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+    <button id="btn" type="submit">Submit</button>
+  </form>
+
+  <script src="script.js"></script>
+</body>
 </html>
