--- a/main.html
+++ b/main.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <title>Voting Eligibility Form</title>
 </head>
-<body style="font-family: sans-serif; padding: 40px; background-color: #f5f5f5;">
+<body>
   <h2>Check Voting Eligibility</h2>
-
   <form id="voteForm">
-    <label for="name">Name:</label><br>
+    <label for="name">Name:</label>
     <input type="text" id="name" /><br><br>
 
-    <label for="age">Age:</label><br>
+    <label for="age">Age:</label>
     <input type="number" id="age" /><br><br>
 
     <button id="btn" type="submit">Submit</button>
   </form>
 
+  <!-- Link to external JavaScript -->
   <script src="script.js"></script>
 </body>
 </html>
