--- a/main.html
+++ b/main.html
@@ -5,18 +5,20 @@
   <title>Voting Eligibility Form</title>
 </head>
 <body>
-  <h2>Check Voting Eligibility</h2>
-  <form id="voteForm">
+  <h2>Voting Eligibility Form</h2>
+
+  <!-- 1️⃣ HTML Form Elements -->
+  <form id="votingForm">
     <label for="name">Name:</label>
-    <input type="text" id="name" /><br><br>
+    <input type="text" id="name" /><br /><br />
 
     <label for="age">Age:</label>
-    <input type="number" id="age" /><br><br>
+    <input type="number" id="age" /><br /><br />
 
-    <button id="btn" type="submit">Submit</button>
+    <button type="submit" id="btn">Submit</button>
   </form>
 
-  <!-- Link to external JavaScript -->
+  <!-- Link to external JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
