--- a/main.html
+++ b/main.html
@@ -5,10 +5,9 @@
   <title>Voting Eligibility Form</title>
 </head>
 <body>
-  <h2>Voting Eligibility Form</h2>
-
-  <!-- 1️⃣ HTML Form Elements -->
-  <form id="votingForm">
+  <h2>Check Voting Eligibility</h2>
+  
+  <form id="voteForm">
     <label for="name">Name:</label>
     <input type="text" id="name" /><br /><br />
 
@@ -18,7 +17,6 @@
     <button type="submit" id="btn">Submit</button>
   </form>
 
-  <!-- Link to external JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
